Fixed small graphical bug where the non-root flush navbar had the wrong background color

--- a/client/src/components/nav/NavBar/NavBar.scss
+++ b/client/src/components/nav/NavBar/NavBar.scss
@@ -160,7 +160,7 @@
 
   &.nav-state-flush {
     & .NavBar__content {
-      background-color: color-link("bg-nav");
+      background-color: color-link("bg-primary", 0);
       box-shadow: 0px 1px 4px 2px rgba(0,0,0,0);
     }
   }
